Changed example content

--- a/example.html
+++ b/example.html
@@ -12,6 +12,6 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <button id="open-dialog">Open Dialog</button>
+    <h1>Hello!</h1>
 </body>
 </html>
